wip: listing of snapshot comparisons